Add compilation with preview