@@ -10,7 +10,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>27</maven.compiler.release>
 	</properties>
 
 	<dependencies>
@@ -28,11 +27,23 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.15.0</version>
+				<configuration>
+					<source>28</source>
+					<target>28</target>
+					<enablePreview>true</enablePreview>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.5.6</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
